--- a/css/popup.css
+++ b/css/popup.css
@@ -4,7 +4,7 @@ body {
 }
 
 div.option {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Comic Sans MS',cursive, sans-serif;
   font-size: 10pt;
   margin: 0px;
   border-bottom: 2px solid lightgray;
