Add favicons to tab selection page

--- a/css/popup.css
+++ b/css/popup.css
@@ -38,8 +38,8 @@ ul.tabList {
   font-size: 10pt;
   list-style-type: none;
   list-style-position: inside;
-  margin: 8px 8px;
-  padding: 0px;
+  margin: 0px 0px;
+  padding: 8px 8px;
 }
 
 li.tab {
@@ -49,4 +49,8 @@ li.tab {
 
 li.tab.selected {
   background-color: lightgray;
+}
+
+img {
+  padding: 0px 8px 0px 0px;
 }
