--- a/css/popup.css
+++ b/css/popup.css
@@ -42,7 +42,7 @@ button.save {
   cursor: pointer;
 }
 
-ul.tabList {
+.tabList {
   font-family: 'Comic Sans MS',cursive, sans-serif;
   font-size: 10pt;
   list-style-type: none;
