--- a/css/popup.css
+++ b/css/popup.css
@@ -35,7 +35,7 @@ div.setList {
   padding: 4px;
 }
 
-button.save {
+button {
   font-family: 'Comic Sans MS',cursive, sans-serif;
   font-size: 10pt;
   padding: 4px;
