--- a/css/index.css
+++ b/css/index.css
@@ -86,3 +86,7 @@ input[type="submit"]:hover {
     overflow: auto;
     background-color: solid white;
 }
+.cpuInfo {
+    font-size: 18px;
+    text-align: center;
+}
